--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <style type="text/css">
             body {
               width: 88%;
-              min-width: 20em;
               max-width: 40em;
+              padding: 0 6%;
               margin: 5em auto;
               line-height: 1.5em;
               font-family: helvetica, sans-serif;
@@ -61,10 +61,11 @@
             }
 
             .illustration {
-                margin: 0;
-                border: solid 1px #bbb;
-                max-width: 100%; 
+                display: block;
+                max-width: 100%;
                 height: auto;
+                margin: 0;
+                outline: solid 1px #bbb;
             }
         </style>
     </head>
@@ -99,10 +100,11 @@
             You can find extensive information about <a href="https://linkedin.com/in/fabienbasmaison">my professional background on LinkedIn</a>, some <a href="https://github.com/arkhi/">code on github</a>, and more <a href="http://arkhi.org/feed/juji">serendipitous gathering of things</a>.
         </p>
 
-        <h2>What I like to do</h2>
+        <h2>What I like</h2>
 
         <ul>
-            <li>Learn and find solutions to problems.</li>
+            <li>Learn</li>
+            <li>Find solutions to problems.</li>
             <li>Iterate well planned small changes on big projects</li>
             <li>Work on several little projects for different clients.</li>
         </ul>
@@ -111,9 +113,7 @@
 
         <p>Curious people who want to challenge requirements in order to make the project better.</p>
 
-        <h2>
-            Some projects I worked on
-        </h2>
+        <h2>Some projects I worked on</h2>
 
         <ol class="projects">
             <li class="projects__project">
